# NeuroTracerVR

./: .gitignore  CMakeLists.txt  README.md
3rd/: spdlog.cmake
3rd/VolumeCompression/: .gitignore  README.MD
3rd/VolumeCompression/include/VoxelCompression/voxel_compress/: VoxelCmpDS.h  VoxelCompress.h
3rd/VolumeCompression/include/VoxelCompression/voxel_uncompress/: VoxelUncompress.h
3rd/VolumeCompression/src/compress/: CMakeLists.txt
3rd/VolumeCompression/src/uncompress/: CMakeLists.txt
3rd/VolumeCompression/test/: CMakeLists.txt  test_compress.cpp
3rd/VolumeCompression/tools/: CMakeLists.txt
cfg/: actions.json  vive_controller_binding.json  vol_cfg.json
include/camera/: dual_eye_camera.hpp
include/cg/: color_tbl.hpp
include/path/: depth.fs  diffuse.fs  gl_path_renderer.hpp  line.gs  vert.gs  vert.vs
include/stateful/: stateful.hpp
include/util/: openvr_helper.hpp  vol_cfg.hpp
include/vs_core/VolumeSlicer/: camera.hpp  render.hpp
src/: CMakeLists.txt  glfw_app.cpp  glfw_app.h  main.cpp  qt_app.cpp  qt_app.h  shared_states.h  vr_app.cpp  vr_app.h
src/gui/: gl_view.hpp  main_window.cpp  main_window.h  main_window.ui
src/renderer/: FAVR.cu  vr_renderer.cu  vr_renderer.h
src/renderer/comp/: comp_vol_algorithm.cu  comp_vol_algorithm.h  comp_vol_vr_renderer.cu  comp_vol_vr_renderer.h
src/renderer/comp/vs_core/Algorithm/: helper_math.h
src/shader/: color.fs  color.vs  diffuse.fs  diffuse.vs  diffuse_dep.fs  gl_helper.hpp  pos.fs  pos.vs  quad.fs  quad.vs
test/: CMakeLists.txt  test_stateful.cpp
